image in bucket ok
